--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "dotenv": "^16.3.1",
     "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.180",
-    "pdf-parse": "^1.1.1",
-    "readline": "^1.3.0"
+    "pdf-parse": "^1.1.1"
   }
 }
