--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "sophia-ai",
   "version": "1.0.0",
   "description": "a nodejs project for QA using AI",
-  "main": "index.js",
+  "exports": "./dist/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -15,6 +16,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
     "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.180",
